# llm-learning-material

./: .gitignore  README.md
1-agentic-rag/: Notes.md  README.md  agents.ipynb  notebook.ipynb  pyproject.toml
1-agentic-rag/homework/: homework.md  hw-agentic-rag.ipynb  rag_helper.py
2-vector-search/: README.md  pyproject.toml
2-vector-search/code/: vector_search.ipynb  vector_search_persistent.ipynb  vector_search_pgvector.ipynb
2-vector-search/code/llm-zoomcamp-onnx/: pyproject.toml  vector_search_onnx.ipynb
2-vector-search/llm-zoomcamp-hw2/: homework.md  solution.ipynb
